--- a/WebApiHomework/packages.config
+++ b/WebApiHomework/packages.config
@@ -3,6 +3,7 @@
   <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
+  <package id="NUnit.ConsoleRunner" version="3.11.1" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net472" />
   <package id="RestSharp" version="106.11.7" targetFramework="net472" />
 </packages>
